@startuml
'https://plantuml.com/class-diagram
skinparam shadowing false
skinparam defaultFontName xfonts-wqy
skinparam dpi 300
skinparam activity  {
    DiamondFontSize 14
    ArrowFontSize 14
    FontSize 14
}

class HeaderInterceptor {
    - ICredentialVerifier<ServerTokenCredential> tokenVerifier
    - ServerCredentialConfig serverCredentialConfig
    + boolean preHandle(HttpServletRequest, HttpServletResponse, Object handler)
}
HeaderInterceptor ..> ICredentialVerifier: 验证请求方的 token

abstract class CredentialCacheHandler {
    - RedisTemplate<String, TokenCredential> redisTemplate
    # {abstract} String getCacheKey(String token)
    # {abstract} TokenCredential verifyAndGetCredential(String token)
    + TokenCredential verifyAndGet(String token)
    - TokenCredential getByRemote(String token, String key)
    - void cacheCredential(String key, TokenCredential value, Date expireAt)
    + <T> void invalidCache(String token)
}
note top of CredentialCacheHandler:凭证缓存制器，是一个抽象类
CredentialCacheHandler ..> RedisTemplate: Spring Redis操作
class RedisTemplate

class ServerCredentialCacheHandler extends CredentialCacheHandler {
    - ServerCredentialConfig serverCredentialConfig
    - ServerCredentialFeign serverCredentialFeign
    # String getCacheKey(String token)
    # TokenCredential verifyAndGetCredential(String token)
}
note right of ServerCredentialCacheHandler: 服务凭证缓存实现类
ServerCredentialCacheHandler ..> ServerCredentialFeign: 远程访问Auth服务
interface ServerCredentialFeign {
    + ServerTokenCredential verify(String token)
    + ServerTokenCredential createCredential(ServerAuthCommand)
}
note left of ServerCredentialFeign: OpenFeign远程调用


interface ICredentialVerifier<T extends TokenCredential> {
    + T verify(String token)
}
class RemoteServerCredentialVerifier<ServerTokenCredential> implements ICredentialVerifier {
    - ServerCredentialCacheHandler credentialCacheHandler
    + ServerTokenCredential verify(String token)
}
RemoteServerCredentialVerifier ..> ServerCredentialCacheHandler

@enduml